LIST OF CHANGES FOR NPG-QC PACKAGE

 - npg_qc::autoqc::qc_store - load rna_seqc results into npg_qc db
   (requires rna_seqc table exists in database).
 - Updated data/schema.txt including definition for rna_seqc table.
 - SeQC:
   - Added template for rna_seqc check with selected metrics shown
     in summary
   - Include a link to original RNA-SeQC report only visible 
     when db_lookup=0.
 - translation from a database composition representation to the
     npg_tracking::glossary::composition type object
 - db query for compisition-based tables should include a condition
     on tag_index if only lanes or plexes are being retrieved
 - Fix in npg_qc::utils::bam_genotype for rare out of order mpileup failures 
 - Travis CI build: when building dependencies, us the same
   branch as the one the pull request is made to.
 - back to testing with mysql 5.7.13 in travis
 - drop node 0.12 from node travis matrix
 - add perl 5.22-shrplib to travis matrix
 - to reduce uncertainty in ranking close results, increase precision
   used for ranking contamination results
 - call_gtck_composite_rpt.pl - supply rpt list to genotype check
 - Code and tests changes to reduce number of warnings under Perl 5.22.2
 - sequence mismatch - do not return PDL special values, treat NaN as
   a bad value and return undefined instead

release 62.5
 - a very concise replacement for NPG_QC pages
 - no templates rna_seqc results - we should not try rendering

release 62.4
 - autoqc loader does not try loading a result for which there is
   no coresponding DBIx binding

release 62.3
 - make bam_flagstats check runnable under the qc script
 - remove autoqc loader backwards compatibility with analysis code
   that does not generate related results for the bam_flagstats results
 - Arguments given to the qc script are passed through to the relevant
   qc check object.
 - QC script does not try to infer the location of input files.
 - QC script accepts the rpt_list argument.