@@ -1,5 +1,6 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - upgrade_schema-60.x to create rna_seqc table has been included.
  - npg_qc::autoqc::qc_store - load rna_seqc results into npg_qc db
    (requires rna_seqc table exists in database).
  - Updated data/schema.txt including definition for rna_seqc table.
